--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.11",
+    "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.11",
     "@react-icons/all-files": "^4.1.0",
+    "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "react-tabs": "^6.0.2",
-    "styled-components": "^5.3.11"
+    "react-slick": "^0.29.0",
+    "react-tabbordion": "^1.0.6",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.11",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
