--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-tabbordion": "^1.0.6",
+    "react-tabs": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
     "swiper": "^10.3.1"
