--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.11",
     "@react-icons/all-files": "^4.1.0",
+    "aos": "^2.3.4",
     "keen-slider": "^6.8.6",
     "lottie-player": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-parallax-tilt": "^1.7.170",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-tabbordion": "^1.0.6",
