--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-iframe": "^1.8.5",
     "react-parallax-tilt": "^1.7.170",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
