--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "keen-slider": "^6.8.6",
     "lottie-player": "^1.0.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-iframe": "^1.8.5",
     "react-parallax-tilt": "^1.7.170",
     "react-router-dom": "^6.16.0",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-tabbordion": "^1.0.6",
     "react-tabs": "^6.0.2",
