--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@mui/styled-engine-sc": "^5.14.11",
     "@react-icons/all-files": "^4.1.0",
     "aos": "^2.3.4",
+    "firebase": "^10.5.0",
     "keen-slider": "^6.8.6",
     "lottie-player": "^1.0.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-iframe": "^1.8.5",
     "react-parallax-tilt": "^1.7.170",
@@ -35,8 +37,10 @@
     "react-tabbordion": "^1.0.6",
     "react-tabs": "^6.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "recharts": "^2.9.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
@@ -44,6 +48,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
