--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.11.0",
     "react-iframe": "^1.8.5",
     "react-parallax-tilt": "^1.7.170",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
