--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.29.0",
     "react-tabbordion": "^1.0.6",
     "react-tabs": "^6.0.2",
